# rtorrent-build

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  SHARED_LIBCXX_PROBLEM.md  build.py  dprint.json  manifest.schema.json  manifest.schema.jsonc  neptune.Dockerfile  pyproject.toml  taskfile.yaml  taskfile.yml
.github/: renovate.json
.github/workflows/: build.yaml  cleanup-runs.yaml  docker.yaml  lock.yml  manifest-lock.yaml  neptune-docker.yaml  new-release.yml
manifests/: common.jsonc  qbittorrent-5.1-lt1.jsonc  qbittorrent-5.1-lt2.jsonc  qbittorrent-5.1.4-lt1.jsonc  qbittorrent-5.1.4-lt2.jsonc  qbittorrent-5.2-lt1.jsonc  qbittorrent-5.2-lt2.jsonc  qbittorrent-5.2.1-lt1.jsonc  qbittorrent-5.2.1-lt2.jsonc  qbittorrent-nox.jsonc  rtorrent-0.16.12.jsonc  rtorrent-0.16.jsonc  rtorrent-0.9.8.jsonc  rtorrent-fork.jsonc  rtorrent-master.jsonc  rtorrent-trim21-fork.jsonc  rtorrent-trim21.jsonc  transmission.jsonc
manifests/base/: common.jsonc  openssl3.jsonc
patches/: lua-ok-compat.patch
scripts/: README.md.j2  RELEASE.md.j2  generate_readme.py  generate_release_notes.py  generate_schema.py  lock.py  new-rtorrent-release.py  pr-body.py
src/rtorrent_builder/: __init__.py  _options.py  _types.py  builder.py  cache.py  cli.py  docker.py  dockerfile.j2  download.py  lock.py  manifest.py  run.py  toolchain.py  utils.py  version_range.py
toolchains/default/: pyproject.toml
