[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "rtorrent-static"
version = "0.1.0"
description = "Build static rtorrent binaries linked only to glibc using zig"
requires-python = ">=3.12"
dependencies = [
  "click>=8.0",
  "httpx>=0.28.1",
  "jinja2>=3.0",
  "json5>=0.14.0",
  "pydantic>=2.10.0",
  "tqdm>=4.67.0",
  "packaging>=24.0",
]

[project.scripts]
rtorrent-build = "rtorrent_builder.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "N",
  "W",
  "UP",
  "B",
  "C4",
  "SIM",
]
extend-ignore = ['SIM108']

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src"]
reportMissingTypeStubs = false
reportUnknownMemberType = false

[dependency-groups]
dev = [
  "types-tqdm>=4.67.3.20260508",
]
