[project]
name = "default-toolchain"
version = "0.1.0"
description = "Shared zig + cmake toolchain for static builds"
requires-python = ">=3.12"
dependencies = [
  "cmake<4",
  "meson>=1,<2",
  "ninja>=1,<2",
  "patchelf>=0.17,<1",
  "pkgconf>=3,<4",
  "ziglang==0.16.0",
]

[tool.uv]
managed = true
